# conf-briefing

./: .gitignore  LICENSE  README.md  STRIX-HALO.md  flake.nix  index.html  justfile  pyproject.toml
.claude/: settings.local.json
conf_briefing/: __init__.py  cli.py  config.py  console.py  io.py
conf_briefing/analyze/: __init__.py  agenda.py  entities.py  llm.py  ranking.py  recordings.py  schemas.py  synthesis.py
conf_briefing/clean/: __init__.py  normalize.py
conf_briefing/collect/: __init__.py  providers.py  recordings.py  sched_scraper.py  schedule.py  transcripts.py  video_dl.py  whisper_transcribe.py  youtube.py
conf_briefing/extract/: __init__.py  describe.py  preflight.py  slides.py  transcribe.py  transcribe_whisper_cpp.py
conf_briefing/query/: __init__.py  ask.py  chunker.py  index.py
conf_briefing/report/: __init__.py  (+7 more)
docs/: book.toml
events/: kubecon-eu-2026.toml
kubecon-eu-2026/: 01-conference-landscape-overview.html  02-ai-ml-and-llm-workloads.html  03-security-and-policy-enforcement.html  04-platform-engineering-and-devops-practices.html  05-kubernetes-operators-and-multi-tenancy.html  06-observability-and-telemetry.html  07-kubernetes-scheduling-and-resource-management.html  07-supply-chain-security-and-sbom.html  08-ebpf-and-kernel-level-solutions.html  08-kubernetes-scheduling-and-resource-management.html  09-cross-cutting-themes.html  09-ebpf-and-kernel-level-solutions.html  10-debates-and-contradictions.html  10-edge-and-iot-computing.html  11-cross-cutting-themes.html  11-technology-maturity-assessment.html  12-debates-and-contradictions.html  12-prioritized-recommendations.html  13-brief-notes.html  13-technology-maturity-assessment.html  14-prioritized-recommendations.html  404.html  appendix.html  index.html  print.html  searcher-c2a407aa.js  searchindex-8e8cf4a0.js  searchindex-ae828afd.js  toc-0b103363.js  toc-32bf8879.js  toc.html
scripts/: deploy-book.sh  fix-execstack.py
templates/: agenda_report.md.j2  briefing_report.md.j2  briefing_v2.md.j2  ranking_report.md.j2  recording_report.md.j2
(+7 files in other folders)
