[project]
name = "conf-briefing"
version = "0.1.0"
description = "AI-powered conference analysis tool"
readme = "docs/src/introduction.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Leonard Vincent Simon Pahlke" }]
dependencies = [
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "yt-dlp>=2024.0",
    "plotly>=5.18",
    "kaleido>=0.2",
    "wordcloud>=1.9",
    "chromadb>=0.5",
    "ollama>=0.4",
    "rich>=13.0",
]

[project.scripts]
conf-briefing = "conf_briefing.cli:main"

[project.optional-dependencies]
extract = [
    "faster-whisper>=1.0",
    "scenedetect[opencv]>=0.6",
    "imagehash>=4.3",
    "pytesseract>=0.3",
]
scrape = ["patchright>=1.40"]
dev = ["ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["conf_briefing"]
